<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/mainactivitybackground"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_of_death"
        android:gravity="center"
        android:layout_marginTop="35dp"
        android:textSize="40sp"
        android:textColor="#f9fde5"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_your_death_age_and_hit_go"
        android:textColor="#f9fde5"
         />

    <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:hint="@string/age_1_100"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#f9fde5"
        android:textColorHint="#f9fde5"
        android:backgroundTint="#f9fde5"
        android:id="@+id/et1"
        android:inputType="numberPassword"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/go"
        android:textColor="#000"
        android:id="@+id/b1"
        android:onClick="go1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:id="@+id/t4"
        android:textColor="#f9fde5"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rule"
        android:textColor="#f9fde5"
        android:gravity="center"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule2"
        android:layout_gravity="end"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#264eca"
        android:id="@+id/b2"
        android:onClick="rule"
        />
</LinearLayout>